fix vertical alignment of icons

--- a/css/soopfw_icons.css
+++ b/css/soopfw_icons.css
@@ -5,7 +5,7 @@
 	background-repeat: no-repeat;
 	width: 16px;
 	height: 16px;
-	vertical-align: sub;
+	vertical-align: middle;
 }
 
 /* First cells */
